--- a/src/LagoVista.UserAdmin/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin/Resources/UserAdminResources.resx
@@ -605,4 +605,7 @@
   <data name="VerifyPhoneNumberVM_Title" xml:space="preserve">
     <value>Verify Phone Number</value>
   </data>
+  <data name="AppUser_IsSystemAdmin" xml:space="preserve">
+    <value>Is System Admin</value>
+  </data>
 </root>
