--- a/src/LagoVista.UserAdmin/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin/Resources/UserAdminResources.resx
@@ -674,8 +674,8 @@
   <data name="AuthErr_MissingClientType" xml:space="preserve">
     <value>ClientType is required for authentication</value>
   </data>
-  <data name="AuthErr_MissingInstallationId" xml:space="preserve">
-    <value>Installation Id is required for authentication</value>
+  <data name="AuthErr_MissingAppInstanceid" xml:space="preserve">
+    <value>App Instance Id is required for renewing an access token with a refresh token</value>
   </data>
   <data name="AuthErr_EmailInvalidFormat" xml:space="preserve">
     <value>Invalid Email Format</value>
@@ -703,5 +703,8 @@
   </data>
   <data name="AuthErr_AuthRequestNull" xml:space="preserve">
     <value>Authentication Request is null, can not validate user</value>
+  </data>
+  <data name="AuthErr_MissingDeviceId" xml:space="preserve">
+    <value>Device ID is required for authorization</value>
   </data>
 </root>
