--- a/src/LagoVista.UserAdmin/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin/Resources/UserAdminResources.resx
@@ -800,4 +800,7 @@
   <data name="ErrInvitation_CantFind" xml:space="preserve">
     <value>Sorry, we could not find that invitation</value>
   </data>
+  <data name="AuthError_NotSysAdmin" xml:space="preserve">
+    <value>Update Requires SysAdmin </value>
+  </data>
 </root>
