--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -239,7 +239,7 @@
   </data>
   <data name="InviteUser_ClickHere" xml:space="preserve">
     <value>&lt;p&gt;To accept the invitation and begin using the platform, please click &lt;a href='[ACCEPT_LINK]'&gt;open in browser&lt;/a&gt;.&lt;/p&gt;
-&lt;p&gt;Or copy and paste the link below into the address bar of yoru browser
+&lt;p&gt;Or copy and paste the link below into the address bar of your browser
 &lt;div&gt;[ACCEPT_LINK]&lt;/div&gt;
 &lt;/p&gt;</value>
   </data>
@@ -740,7 +740,7 @@
   <data name="Email_ResetPassword_Body" xml:space="preserve">
     <value>&lt;p&gt;You have requested to have your password reset.&lt;/p&gt;
 
-&lt;p&gt;Please Reset your Password by clicking this &lt;a href='[CALLBACK_URL]'&gt;Reset Password&lt;/a&gt;link.&lt;/p&gt;
+&lt;p&gt;Please Reset your Password by clicking this &lt;a href='[CALLBACK_URL]'&gt;Reset Password&lt;/a&gt; link.&lt;/p&gt;
 
 &lt;p&gt;If you did not request your password to be changed, you can safely ignore this email.&lt;/p&gt;</value>
   </data>
@@ -886,5 +886,8 @@
   </data>
   <data name="Appuser_IsAccountDisabled" xml:space="preserve">
     <value>Is Account Disabled</value>
+  </data>
+  <data name="RegisterUserExists_3rdParty" xml:space="preserve">
+    <value>A user with that email account already exists please invite them to this organization.</value>
   </data>
 </root>
